Fixed spacing on form settings modal #1644

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -980,6 +980,7 @@
         .cp-radio, .cp-checkmark {
             display: inline-flex;
             max-width: 100%;
+            margin: 0.2rem;
         }
         .cp-checkmark-label {
             word-break: break-word;
@@ -1286,6 +1287,7 @@
         }
     }
 
+
     #cp-form-settings {
         .cp-modal {
             text-align: left;
@@ -1319,6 +1321,22 @@
                     }
                 }
             }
+            .cp-form-status {
+                margin-bottom: 0.2rem;
+            }
+            .cp-form-mute-radio {
+                margin-top: 0.2rem;
+            }
+
+            .cp-form-privacy-container {
+                margin-top: 0.8rem
+            }
+
+            .cp-form-results-type {
+                display: inline-block;
+                margin: 0.2rem 0 0.2rem 0;
+            }
+
         }
     }
     & > .flatpickr-calendar {
